<resources>
    <string name="app_name">Dementia Care</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Enter username</string>
    <string name="password">Enter password</string>
    <string name="name">Enter name</string>
    <string name="email">Enter email</string>
    <string name="address">Enter address</string>
    <string name="confirm_password">Re-enter password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
<<<<<<< HEAD
    

=======
    <string name="action_change_radius">Change Safe Zone Radius</string>
    <string name="action_map_type">Map Type</string>
    <string name="action_tracking_interval">Update Interval</string>
>>>>>>> b5d2a787b9a45a98a510a50dd5229195138620a5
</resources>