<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:padding="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="App Logo"
            android:src="@mipmap/ic_launcher_round"
            android:scaleType="fitCenter"/>

        <TextView
            android:text="Create Account"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/greenPrimary"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColorHint="@color/dark_gray"
            app:boxStrokeColor="@color/greenPrimary"
            app:hintTextColor="@color/greenPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColorHint="@color/dark_gray"
            app:boxStrokeColor="@color/greenPrimary"
            app:hintTextColor="@color/greenPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColorHint="@color/dark_gray"
            app:boxStrokeColor="@color/greenPrimary"
            app:hintTextColor="@color/greenPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColorHint="@color/dark_gray"
            app:boxStrokeColor="@color/greenPrimary"
            app:hintTextColor="@color/greenPrimary"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/greenPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:textColorHint="@color/dark_gray"
            app:boxStrokeColor="@color/greenPrimary"
            app:hintTextColor="@color/greenPrimary"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/greenPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:backgroundTint="@color/greenPrimary"
            app:cornerRadius="8dp" />

        <!-- Add this ProgressBar -->
        <ProgressBar
            android:id="@+id/registerProgress"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="24dp"
            android:visibility="gone"
            android:indeterminateTint="@color/greenPrimary"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already have an account? "
                android:textColor="@color/dark_gray" />

            <TextView
                android:id="@+id/text_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/greenPrimary"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
